<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_direction"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_direction_vertical" />

        <RadioButton
            android:id="@+id/rbHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_direction_horizontal" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_pages"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbContinuous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_pages_continuous" />

        <RadioButton
            android:id="@+id/rbSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_pages_single" />
    </RadioGroup>

</LinearLayout>
